Archive/5a125e192d1282e618e9223b3ad1d503-7616891f9fd25da6391c2728423de797/output
+ g++ -std=c++11 main.cpp -o test
main.cpp:1:1: error: ‘http’ does not name a type
 http://ideone.com/quxac2
 ^
